Added header and Link Assignment
Added header and Link Assignment

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i>&nbsp;&nbsp;
+    <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i>&nbsp;&nbsp;
+    <i class="fa fa-envelope" aria-hidden="true"> mohitsharma@gmail.com</i>
+<br>
+<br>
+<a href="">Home</a>&nbsp;&nbsp;&nbsp;
+<a href=""> Tech Stack</a>&nbsp;&nbsp;&nbsp;
+<a href=""> Project</a>&nbsp;&nbsp;&nbsp;
+<a href="">Education</a>&nbsp;&nbsp;&nbsp;
+<a href="">About Me</a>
+<br>
+<br>
+<iframe width="400px" height="200px">
+
+</iframe>
     
 </body>
 </html>
