All the changes are committed and push
All the changes are committed and push

--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my profile</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-    <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i>&nbsp;&nbsp;
-    <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i>&nbsp;&nbsp;
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i
+    >&nbsp;&nbsp;
+    <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i
+    >&nbsp;&nbsp;
     <i class="fa fa-envelope" aria-hidden="true"> mohitsharma@gmail.com</i>
-<br>
-<br>
-<a href="">Home</a>&nbsp;&nbsp;&nbsp;
-<a href=""> Tech Stack</a>&nbsp;&nbsp;&nbsp;
-<a href=""> Project</a>&nbsp;&nbsp;&nbsp;
-<a href="">Education</a>&nbsp;&nbsp;&nbsp;
-<a href="">About Me</a>
-<br>
-<br>
-<iframe width="400px" height="200px">
+    <br />
+    <br />
+    <nav>
+      <a href="home.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;
+      <a href="techStack.html" target="my frame"> Tech Stack</a>&nbsp;&nbsp;&nbsp;
+      <a href="projectDetails..html" target="my frame"> Project</a>&nbsp;&nbsp;&nbsp;
+      <a href="studentform.html" target="my frame">Education</a>&nbsp;&nbsp;&nbsp;
+      <a href="aboutMe.html" target="my frame">About Me</a>
+    </nav>
+    <br />
+    <br />
+    <iframe width="600px" height="300px" name="my frame"> 
 
-</iframe>
-    
-</body>
+    </iframe>
+  </body>
 </html>
