Develop page education,project,home and techstack
Develop page education,project,home and techstack

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <br />
     <br />
-    <iframe width="600px" height="300px" name="my frame"> 
+    <iframe width="600px" height="300px" name="my frame" src="home.html" frameborder="0"> 
 
     </iframe>
   </body>
