Download Resume button is added in header section and after frame added Follow Me  with font awesome icons at footer section
Download Resume button is added in header section and after frame added Follow Me  with font awesome icons at footer section

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>My Personal Details</h3>
-    <img src="assets/whatsapp profile.jpg" width="100px" height="100px" alt="profile photo">
+    <img src="assest/whatsapp profile.jpg" width="100px" height="100px" alt="profile photo">
     <br>
     <p><strong>Name :</strong>Shweta Deshmukh</p>
     <p><strong>Contact Details</strong></p>
