--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i
     >&nbsp;&nbsp;
     <i class="fa fa-envelope" aria-hidden="true"> mohitsharma@gmail.com</i>
-    <br />
-    <br />
+    &nbsp;&nbsp;&nbsp;&nbsp; <i class="fa fa-download" aria-hidden="true">&nbsp;&nbsp;<a href="assest/Shweta_Resume (1).pdf" download="download"><button>Download Resume</button></a></i>
+    <br /><br>
     <nav>
       <a href="home.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;
       <a href="techStack.html" target="my frame"> Tech Stack</a>&nbsp;&nbsp;&nbsp;
@@ -29,5 +29,13 @@
     <iframe width="600px" height="300px" name="my frame" src="home.html" frameborder="0"> 
 
     </iframe>
+    <div>
+     <span><b>Follow Me :</b> 
+    <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;
+    <a href="https://in.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>&nbsp;&nbsp;
+   <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;
+    <a href="https://www.facebook.com/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+    </span>
+    </div>
   </body>
 </html>
