Footer tag  and copy tag added
Footer tag  and copy tag added

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
     <iframe width="600px" height="300px" name="my frame" src="home.html" frameborder="0"> 
 
     </iframe>
-    <div>
+    <footer></footer>
      <span><b>Follow Me :</b> 
     <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;
     <a href="https://in.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>&nbsp;&nbsp;
    <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;
     <a href="https://www.facebook.com/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
     </span>
-    </div>
+    <p>Copyright &copy; 2023 Zoom video communication, Inc.All rights reserved .</p>
+    </footer>
   </body>
 </html>
