change the colour and background colour
change the colour and background colour

--- a/home.html
+++ b/home.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
-</head>
-<body>
+    <style>
+    #Career {
+        color: brown;
+        background-color: aquamarine;
+      }
+      p {
+        text-transform: uppercase;
+      }
+      li {
+        color: blue;
+        background-color: palegoldenrod;
+      }
+      #name {
+        color: green;
+      }
+      #list {
+        color: purple;
+        background-color: paleturquoise;
+      }
+      span {
+        color: red;
+      }
+      h3{
+        color: maroon; background-color: navajowhite;
+      }
+    </style>
+  </head>
+  <body>
+    <h3 id="Career">Career Objectives</h3>
+    <p>
+      to work the organization where i can learn and grow my skill and help
+      orgnization growth
+    </p>
     <h3>Professional Summary</h3>
     <ul>
-        <li>Having 1 Year Experience in developing single page Web Applications using Angular 8 , HTML5,CSS3,Bootstrap 5,TypeScript</li>
-        <li>Exprience on working with version control system - GIT and GitHub</li>
-        <li>Expriences working with JIRA for and bug tracking</li>
-        <li>Stong Debugging and troubleshooting code Exprience using Chrome Devopler Tool</li>
-        <li> working exposure on IDs like VS code and Notepad++</li>
-        <li> Good working Exprience under Agile methologies enviroment</li>
-        <li> Exprience using chrom Devopler tool for Debugging and troubleshooting the code</li>
-        <li> Knowledge of NodeJS</li>
-        <li> abality to work people at all levels in the program</li>
+      <li id="name">
+        Having 1 Year Experience in developing single page Web Applications
+        using <span> Angular 8 </span>, HTML5,CSS3,Bootstrap 5,TypeScript
+      </li>
+      <li id="name">
+        Exprience on working with version control system - GIT and GitHub
+      </li>
+      <li id="name">Expriences working with JIRA for and bug tracking</li>
+      <li>
+        Stong Debugging and troubleshooting code Exprience using Chrome Devopler
+        Tool
+      </li>
+      <li id="list">working exposure on IDs like VS code and Notepad++</li>
+      <li>Good working Exprience under Agile methologies enviroment</li>
+      <li id="list">
+        Exprience using chrom Devopler tool for Debugging and troubleshooting
+        the code
+      </li>
+      <li>Knowledge of NodeJS</li>
+      <li>abality to work people at all levels in the program</li>
     </ul>
-    
-</body>
+  </body>
 </html>
