--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <style>
+      section{
+        color: crimson; background-color: oldlace;
+      }
+    </style>
   </head>
   <body>
+    <section>
     <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i
     >&nbsp;&nbsp;
     <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i
     >&nbsp;&nbsp;
     <i class="fa fa-envelope" aria-hidden="true"> mohitsharma@gmail.com</i>
     &nbsp;&nbsp;&nbsp;&nbsp; <i class="fa fa-download" aria-hidden="true">&nbsp;&nbsp;<a href="assest/Shweta_Resume (1).pdf" download="download"><button>Download Resume</button></a></i>
+  </section>
     <br /><br>
     <nav>
       <a href="home.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;
@@ -26,7 +33,7 @@
     </nav>
     <br />
     <br />
-    <iframe width="600px" height="300px" name="my frame" src="home.html" frameborder="0"> 
+    <iframe width="600px" height="400px" name="my frame" src="home.html" frameborder="0"> 
 
     </iframe>
     <div>
