color ,style size changed
color ,style size changed

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personalDetails.html</title>
+    <style>
+        .text{
+            color: maroon;
+            background-color: beige;
+            text-decoration: underline;
+            text-transform: uppercase;
+            text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+            word-spacing: 5px;
+         letter-spacing: 2px;
+        }
+        table,tr,th,td{
+                        border: 2px solid rgb(4, 56,58);
+                            border-collapse: collapse;}
+
+    </style>
 </head>
 <body>
-    <h3>My Personal Details</h3>
+    <h3 class="text">My Personal Details</h3>
     <img src="assest/whatsapp profile.jpg" width="100px" height="100px" alt="profile photo">
     <br>
     <p><strong>Name :</strong>Shweta Deshmukh</p>
@@ -15,7 +30,7 @@
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Email :</strong>shwetadeshmukh@gmail.com</p>
             <hr>
-            <h3>My Technology Stack</h3>
+            <h3 class="text">My Technology Stack</h3>
             <ul>
                 <li>HTML5</li>
                 <li>CSS</li>
@@ -23,14 +38,9 @@
                 <li>Angular</li>
             </ul>
             <hr>
-            <h3>Acadamic Details</h3>
+            <h3 class="text">Acadamic Details</h3>
             <table>
-                <style>
-                    table,tr,th,td{
-                        border: 2px solid rgb(4, 56,58);
-                        border-collapse: collapse;
-                    }
-                </style>
+               
                 <thead>
                     <tr>
                         <th>Sr.No</th>
