--- a/home.html
+++ b/home.html
@@ -6,28 +6,39 @@
     <title>Home page</title>
     <style>
     #Career {
-        color: brown;
-        background-color: aquamarine;
+      color: brown;
+            background-color: beige;
+            text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+            word-spacing: 5px;
+         letter-spacing: 2px;
       }
       p {
         text-transform: uppercase;
       }
       li {
         color: blue;
-        background-color: palegoldenrod;
+        background-color: aliceblue;
       }
       #name {
         color: green;
+        background-color: aliceblue;
       }
       #list {
         color: purple;
-        background-color: paleturquoise;
+        background-color: aliceblue;
       }
       span {
         color: red;
       }
       h3{
-        color: maroon; background-color: navajowhite;
+        color: brown;
+            background-color: beige;
+            text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+            word-spacing: 5px;
+         letter-spacing: 2px;
+      }
+      .ll{
+        background-color: aliceblue;
       }
     </style>
   </head>
@@ -38,7 +49,7 @@
       orgnization growth
     </p>
     <h3>Professional Summary</h3>
-    <ul>
+    <ul class="ll">
       <li id="name">
         Having 1 Year Experience in developing single page Web Applications
         using <span> Angular 8 </span>, HTML5,CSS3,Bootstrap 5,TypeScript
