--- a/techStack.html
+++ b/techStack.html
@@ -9,9 +9,20 @@
             border: 2px solid rgb(36,155,160);
             border-collapse: collapse;
         }
+        .list{
+            color:  maroon;
+            background-color: beige;
+            text-transform: uppercase;
+           text-decoration: underline;
+           word-spacing: 5px;
+         letter-spacing: 2px;
+           text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+        }
+
     </style>
 </head>
 <body>
+    <h3 class="list">list of Technology Stack</h3>
    
     <table>
         <thead>
