--- a/projectDetails..html
+++ b/projectDetails..html
@@ -2,39 +2,34 @@
 <html>
     <head>
         <title>projectdetails.html</title>
+        <style>
+            .project{
+                color: maroon;
+            background-color: beige;
+                text-transform: uppercase;
+                text-align: center;
+                text-decoration: underline;
+                word-spacing: 5px;
+         letter-spacing: 2px;
+                text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+            }
+            .role{
+                color:maroon;
+            background-color: beige;
+                text-decoration: underline;
+                text-align: center;
+                text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+                word-spacing: 5px;
+         letter-spacing: 2px;
+            }
+            .para{
+                font-weight: bolder;
+            }
+        </style>
+
     </head>
     <body>
-        <h2>Project Details</h2>
-        <hr>
-        <h4><stong>Name :&nbsp;&nbsp;<u>Student Mangement</u></stong></h4
-        <p><strong><u>Enviroment :</u></strong>&nbsp;&nbsp;<mark>Angular8,TypeScript,JavaScript(BS6),HTML5,CSS,Bootstrap GitHub,Agile and JIRA,IDE -VS Code</mark></p>
-        <p><strong>Team Size:</strong>06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration:</strong><i>2021-1<sup>st</sup>-July till <u>present</u></i></p>
-        <p><strong>Project Decription :</strong> This project is mainly used for student mangegment in collages, where It helps to manage student record like 
-            <br>
-            student registration,student update information and to see all his or her academic activities like score card,attendance.</p>
-         <hr>
-         <h2>Roles and Responsibilities:</h2>  
-         <pre>
-             Designed and implemented the user interface using HTML5 and CSS
-             Work closely with backend devloper for code integration 
-             Identifying and troubleshooting issues with front end code
-             worked on GIT as a version control 
-             Used JIRA for bug tracking 
-             Implemented project using Agile SCRUM methodology,Involved in daily stand up meeting ,sprint showcase,sprint retrospective 
-             Invovled in fixing tecnical issues</pre>
-             <hr>
-
-
-            
-    </body>
-</html>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>projectdetails.html</title>
-    </head>
-    <body>
-        <h2>Project Details</h2>
+        <h2 class="project">Project Details</h2>
         <hr>
         <h4><stong>Name :&nbsp;&nbsp;<u>Student Mangement</u></stong></h4>
         <p><strong><u>Enviroment :</u></strong>&nbsp;&nbsp;<mark>Angular8,TypeScript,JavaScript(BS6),HTML5,CSS,Bootstrap GitHub,Agile and JIRA,IDE -VS Code</mark></p>
@@ -43,8 +38,8 @@
             <br>
             student registration,student update information and to see all his or her academic activities like score card,attendance.</p>
          <hr>
-         <h2>Roles and Responsibilities:</h2>  
-         <pre>
+         <h2 class="role">Roles and Responsibilities:</h2>  
+         <pre class="para">
              Designed and implemented the user interface using HTML5 and CSS
              Work closely with backend devloper for code integration 
              Identifying and troubleshooting issues with front end code
