All the changes are commited and push
All the changes are commited and push

--- a/educationDetails.html
+++ b/educationDetails.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
     <style>
-    table,tr,th,td{
+           .a td,table,tr,th,td{
         border: 2px solid rgb(4, 56,58);
-        border-collapse: collapse;}
+        border-collapse: collapse;
+        padding-left: 10px;
+    }
         .ed{
             color:maroon;
             background-color: beige;
@@ -17,6 +19,9 @@
          letter-spacing: 2px;
          text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
         }
+        /* .a td{
+            padding-left: 10px;
+        } */
 
     </style>
 </head>
@@ -33,18 +38,18 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr class="a">
                 <td>1</td>
                 <td>Graduation</td>
                 <td>COEP collage</td>
                 <td>Pune University</td>
             </tr>
-            <tr>
+            <tr class="a">
                 <td>2</td>
                 <td>HSC or 12<sup>th</sup></td>
                 <td>The Lexicon International School</td>
                 <td>Maharatra divisional Bord</td>
-                <tr>
+                <tr class="a">
                     <td>3</td>
                     <td>SSC or 10<sup>th</sup></td>
                     <td>Indus International School</td>
