--- a/index.html
+++ b/index.html
@@ -17,44 +17,49 @@
         text-decoration: none;
       }
       .fa{
-        color:mediumblue;
+        color:rgba(47, 12, 175, 0.904);
        
+      }
+      .section i{
+        padding-right: 40px;
+
+      }
+      .nav a{
+        margin-right: 40px;
+
+      }
+      .icon a{
+        margin-left: 20px;
       }
     </style>
   </head>
   <body>
-    <section>
-    <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i
-    >&nbsp;&nbsp;
-    <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i
-    >&nbsp;&nbsp;
+    <section class="section">
+    <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i>
+    <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i>
     <i class="fa fa-envelope" aria-hidden="true"> mohitsharma@gmail.com</i>
-    &nbsp;&nbsp;&nbsp;&nbsp; <i class="fa fa-download" aria-hidden="true">&nbsp;&nbsp;<a href="assest/Shweta_Resume (1).pdf" download="download"><button>Download Resume</button></a></i>
+    <i class="fa fa-download" aria-hidden="true">&nbsp;&nbsp;<a href="assest/Shweta_Resume (1).pdf" download="download"><button>Download Resume</button></a></i>
   </section>
     <br>
-    <nav>
-      <a href="home.html" target="my frame" class="cap">Home</a>&nbsp;&nbsp;&nbsp;
-      <a href="techStack.html" target="my frame" class="cap"> Tech Stack</a>&nbsp;&nbsp;&nbsp;
-      <a href="projectDetails..html" target="my frame" class="cap"> Project</a>&nbsp;&nbsp;&nbsp;
-      <a href="educationDetails.html" target="my frame" class="cap">Education</a>&nbsp;&nbsp;&nbsp;
+    <nav class="nav">
+      <a href="home.html" target="my frame" class="cap">Home</a>
+      <a href="techStack.html" target="my frame" class="cap"> Tech Stack</a>
+      <a href="projectDetails..html" target="my frame" class="cap"> Project</a>
+      <a href="educationDetails.html" target="my frame" class="cap">Education</a>
       <a href="aboutMe.html" target="my frame" class="cap">About Me</a>
     </nav>
     <br />
     <br />
-    <iframe width="600px" height="400px" name="my frame" src="home.html" frameborder="0"> 
+    <iframe width="1000px" height="400px" name="my frame" src="home.html" frameborder="0"> 
 
     </iframe>
-<<<<<<< Updated upstream
-    <footer></footer>
-=======
     <br>
-    <br>
-    <div>
->>>>>>> Stashed changes
-     <span><b>Follow Me :</b> 
-    <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;
-    <a href="https://in.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>&nbsp;&nbsp;
-   <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;
+   
+    <footer>
+     <span class="icon"><b>Follow Me :</b> 
+    <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="https://in.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+   <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     <a href="https://www.facebook.com/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
     </span>
     <p>Copyright &copy; 2023 Zoom video communication, Inc.All rights reserved .</p>
