--- a/CSSLearning.html
+++ b/CSSLearning.html
@@ -1,136 +1,114 @@
+
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Learning</title>
-
+</head>
+<body>
+    
+</body>
+</html>
     <style>
-      /* li{
-
+        /* li{
             color: orange;
-
         } */
+        #address{
+            color: cadetblue;
+        }
+        #summary{
+            color: chocolate;
+        }
+        span{
+            color: red;
+            background-color: bisque;
+        }
+        /* This is the combinator selector, which is not recommended */
+        #summary2, #summary3{
+            color: cadetblue;
+            font-weight: bolder;
+            font-size: larger;
+            text-transform: uppercase;
+            font-style: italic;
+        }
+        .fruit{
+            /* color: rgb(30, 100, 100);   */
+            color: #036753;
+        }
+        .para{
+            color: #000000;
+            font-size: x-large;
+            font-weight: bolder;
+            text-transform: capitalize;
+            letter-spacing: 2px;
+            word-spacing: 5px;
+            /* text-decoration: underline; */
+            /* text-shadow: 4px 4px 2px rgba(0,0,0,0.6); */
+        }
+        .listFruits{
+            border: 2px solid red;
+            text-align: center;
+            font-family:'Courier New', Courier, monospace;
+        }
+        .dolor{
+            color: brown;
+            text-decoration: underline;
+        }
+        .education{
+            border: 5px solid rgb(83, 62, 62);
+            /* padding-top: 30px;
+            padding-right: 50px;
+            padding-bottom: 30px;
+            padding-left: 50px; */
+            /* padding: 30px 50px 30px 50px; */
+            /* padding: 30px 50px; */
+            padding: 20px;
+            /* margin-top: 100px;
+            margin-right: 30px;
+            margin-bottom: 100px;
+            margin-left: 50px; */
+            /* margin: 100px 50px; */
+            margin: 50px;
 
-      #address {
-        color: cadetblue;
-      }
+        }
+        .office{
+            border: 2px solid orange;
+            padding: 30px;
+        }
 
-      #summary {
-        color: chocolate;
-      }
-
-      span {
-        color: red;
-
-        background-color: bisque;
-      }
-
-      /* This is the combinator selector, which is not recommended */
-
-      #summary2,
-      #summary3,
-      h3 {
-        color: cadetblue;
-
-        font-weight: bolder;
-
-        font-size: larger;
-
-        text-transform: uppercase;
-
-        font-style: italic;
-      }
-
-      .fruit {
-        /* color: rgb(30, 100, 100);   */
-
-        color: #036753;
-      }
-
-      .para {
-        color: #000000;
-
-        font-size: x-large;
-
-        font-weight: bolder;
-
-        text-transform: capitalize;
-
-        letter-spacing: 2px;
-
-        word-spacing: 5px;
-
-        text-decoration: underline;
-
-        /* text-shadow: 4px 4px 2px rgba(0,0,0,0.6); */
-      }
-
-      .listFruits {
-        border: 2px solid red;
-
-        text-align: center;
-
-        font-family: "Courier New", Courier, monospace;
-      }
-      .lorem {
-        color: aqua;
-        text-decoration: underline;
-        background-color: azure;
-      }
     </style>
-  </head>
-
-  <body>
-    <h2
-      style="
-        color: brown;
-        text-transform: uppercase;
-        text-decoration: underline;
-        font-style: italic;
-      "
-    >
-      my personal details
-    </h2>
-
-    <p style="color: orange; font-weight: bolder; font-size: larger">
-      Lorem ipsum dolor sit amet consectetur.
-    </p>
-
-    <h3 id="summary">Professional Summary</h3>
-
+</head>
+<body>
+    <h2 style="color: brown; text-transform: uppercase; text-decoration: underline; font-style: italic;"> my personal details </h2>
+    <p style="color: orange; font-weight: bolder; font-size: larger;"> Lorem ipsum dolor sit amet consectetur. </p>
+    
+    <h3 id="summary"> Professional Summary </h3>
     <ul>
-      <li>Lorem ipsum dolor sit.</li>
-
-      <li id="summary2">Lorem ipsum dolor sit amet.</li>
-
-      <li id="summary3">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-
-      <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li id="summary2">Lorem ipsum dolor sit amet.</li>
+        <li id="summary3">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+        <li>Lorem, ipsum dolor.</li>
     </ul>
-
-    <h3>My <span> Permanent </span> address</h3>
-
-    <h3 class="listFruits">List Of Fruits</h3>
-
+    <h3> My <span> Permanent </span> address</h3>
+    <h3 class="listFruits"> List Of Fruits </h3>
     <ul>
-      <li>Apple</li>
-
-      <li class="fruit">Mango</li>
-
-      <li class="fruit">Water Melon</li>
-
-      <li>Grapes</li>
+        <li> Apple </li>
+        <li class="fruit"> Mango </li>
+        <li class="fruit"> Water Melon </li>
+        <li> Grapes </li>
     </ul>
 
     <p class="para">
-      <span class="lorem">Lorem ipsum dolor</span> sit amet consectetur
-      adipisicing elit. Perferendis rem impedit modi. Voluptatum est veritatis
-      corporis quaerat non numquam eum qui. Odio totam neque magnam eligendi
-      deleniti debitis consequatur magni!
+        Lorem <span class="dolor">ipsum dolor sit</span> amet consectetur adipisicing elit. Perferendis rem impedit modi. Voluptatum est veritatis corporis quaerat non numquam eum qui. Odio totam neque magnam eligendi deleniti debitis consequatur magni!
     </p>
-  </body>
+
+    <p class="education">
+        My Education Detail
+    </p>
+
+    <h3 class="office">
+        My Office Address
+    </h3>
+</body>
 </html>
