--- a/techStack.html
+++ b/techStack.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECK STACK</title>
     <style>
-        table,tr,th,td{
+       .table td, table,tr,th,td{
             border: 2px solid rgb(36,155,160);
             border-collapse: collapse;
+            padding-left: 5px;
         }
         .list{
             color:  maroon;
@@ -18,6 +19,9 @@
          letter-spacing: 2px;
            text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
         }
+        /* .table td{
+           padding-left: 5px;
+        } */
 
     </style>
 </head>
@@ -33,22 +37,22 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr class="table">
                 <td>1</td>
                 <td>HTML</td>
                 <td>4</td>
             </tr>
-            <tr>
+            <tr  class="table">
                 <td>2</td>
                 <td>CSS</td>
                 <td>4</td>
             </tr>
-            <tr>
+            <tr  class="table">
                 <td>3</td>
                 <td>JavaScript</td>
                 <td>4</td>
             </tr>
-            <tr>
+            <tr  class="table">
                 <td>4</td>
                 <td>Angular</td>
                 <td>3</td>
