Added google font family and use attribute selectors
Added google font family and use attribute selectors

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personalDetails.html</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
     <style>
         .text{
             color: maroon;
@@ -16,7 +22,9 @@
         }
         table,tr,th,td{
                         border: 2px solid rgb(4, 56,58);
-                            border-collapse: collapse;}
+                            border-collapse: collapse;
+                            font-family: 'Signika Negative', sans-serif;
+                        }
                             
          .name{
             margin-left: 50px;
@@ -27,6 +35,12 @@
         .para td{
             padding-left: 10px;
         }
+        h3{
+            font-family: 'Poppins', sans-serif;
+        }
+        p, li{
+            font-family: 'Signika Negative', sans-serif;
+        }
          
     </style>
 </head>
@@ -34,7 +48,7 @@
     <h3 class="text">My Personal Details</h3>
     <img src="assest/whatsapp profile.jpg" width="100px" height="100px" alt="profile photo">
     <br>
-    <p ><b>Name :</b>Shweta Deshmukh</p>
+    <p ><b>Name :</b>  Shweta Deshmukh</p>
     <p ><b>Contact Details</b></p>
         <p class="name"><b>Mobile :</b>9087654321
             <br>
