--- a/educationDetails.html
+++ b/educationDetails.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
     <style>
            .a td,table,tr,th,td{
         border: 2px solid rgb(4, 56,58);
         border-collapse: collapse;
         padding-left: 10px;
+        font-family: 'Signika Negative', sans-serif;
+        background-color: lemonchiffon;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
         .ed{
             color:maroon;
@@ -18,6 +30,7 @@
          word-spacing: 5px;
          letter-spacing: 2px;
          text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+         font-family: 'Poppins', sans-serif;
         }
         /* .a td{
             padding-left: 10px;
