--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <style>
       .section li{
         color: crimson; background-color: oldlace;
@@ -39,15 +42,21 @@
       .class li{
         display: inline-block;
       }
-      
-    </style>
+      p{
+        font-family: 'Sofia', cursive;font-family: 'Sofia', cursive;
+      }
+      #ppp{
+        padding-right: 1px;
+        margin-left: 0px;
+      }
+      </style>
   </head>
   <body>
     <section class="section"> 
       <i class="fa fa-user-circle" aria-hidden="true"> Mohit Sharma</i>
       <i class="fa fa-phone-square" aria-hidden="true"> 9999 9999 99</i>
       <i class="fa fa-envelope" aria-hidden="true"> mohitsharma@gmail.com</i>
-       <i class="fa fa-download" aria-hidden="true">&nbsp;&nbsp;<a href="assest/Shweta_Resume (1).pdf" download="download"><button>Download Resume</button></a></i>
+       <a href="assest/Shweta_Resume (1).pdf" download="download"><button>Download Resume</button></a>
       </section>
     <br>
     <ul class="link">
@@ -67,10 +76,10 @@
     <footer>
       <ul class="class">
     <li> <b>Follow Me :</b> </li>
-       <li><a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-        <li> <a href="https://in.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-        <li> <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+       <li><a href="https://github.com/"><i class="fa fa-github" aria-hidden="true" id="symbol"></i></a></li>
+        <li> <a href="https://in.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true" id="symbol"></i></a></li>
+        <li> <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true" id="symbol"></i></a></li>
+        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook-official" aria-hidden="true" id="symbol"></i></a></li>
       </ul>
     <p>Copyright &copy; 2023 Zoom video communication, Inc.All rights reserved .</p>
     </footer>
