--- a/techStack.html
+++ b/techStack.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECK STACK</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
     <style>
+      
        .table td, table,tr,th,td{
             border: 2px solid rgb(36,155,160);
             border-collapse: collapse;
-            padding-left: 5px;
+            padding-left: 30px;
+            padding-top: 15px;
+            padding-bottom: 10px;
+            padding-right: 30px;
+            font-family: 'Signika Negative', sans-serif;
+            background-color: lemonchiffon;
         }
         .list{
             color:  maroon;
@@ -18,6 +30,9 @@
            word-spacing: 5px;
          letter-spacing: 2px;
            text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+        }
+        h3{
+            font-family: 'Poppins', sans-serif;
         }
         /* .table td{
            padding-left: 5px;
