commited and push
commited and push

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -41,6 +41,12 @@
         p, li{
             font-family: 'Signika Negative', sans-serif;
         }
+        tbody tr:hover{
+            background-color: rgb(241, 166, 113);    
+        }
+        tr:nth-child(even){
+            background-color: rgb(165, 42, 42);
+        }
          
     </style>
 </head>
